--- a/html/magazin/public/css/main.css
+++ b/html/magazin/public/css/main.css
@@ -1,3 +1,4 @@
+@import url("https://fonts.googleapis.com/css?family=Libre+Franklin:300,400,500,600,800,900");
 body {
   font-family: 'Libre Franklin', sans-serif; }
 
@@ -109,4 +110,5 @@ footer {
   min-height: 100px; }
   footer .copyright {
     min-height: 100px; }
+
 /*# sourceMappingURL=main.css.map */
